@@ -22,8 +22,8 @@
 /**
  * Pandora build version and version 
  */
-$build_version = 'PC120202';
-$pandora_version = 'v4.0.1';
+$build_version = 'PC120214';
+$pandora_version = 'v5.0-dev';
 
 date_default_timezone_set("Europe/Berlin");
 
